src/test/ui/generic-associated-types/parse/trait-path-missing-gen_arg.stderr
error: expected one of `>`, const, lifetime, or type, found `:`
  --> $DIR/trait-path-missing-gen_arg.rs:9:30
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                              ^ expected one of `>`, const, lifetime, or type
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |   fn f1<'a>(arg : Box<{ dyn X< : 32 } >>) {}
   |                       ^             ^

error: expected parameter name, found `>`
  --> $DIR/trait-path-missing-gen_arg.rs:9:36
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                                    ^ expected parameter name

error: expected one of `!`, `)`, `+`, `,`, or `::`, found `>`
  --> $DIR/trait-path-missing-gen_arg.rs:9:36
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                                    ^
   |                                    |
   |                                    expected one of `!`, `)`, `+`, `,`, or `::`
   |                                    help: missing `,`

error: expected one of `>`, const, lifetime, or type, found `=`
  --> $DIR/trait-path-missing-gen_arg.rs:17:30
   |
LL |   fn f1<'a>(arg : Box<dyn X< = 32 >>) {}
   |                              ^ expected one of `>`, const, lifetime, or type

warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/trait-path-missing-gen_arg.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0747]: constant provided when a type was expected
  --> $DIR/trait-path-missing-gen_arg.rs:9:23
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                       ^^^^^^^^^^^

error: aborting due to 5 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0747`.
